tests/invalid/ifmaxstatements.nim
# Count: 2
# Negative count: 0

let a = 0

if a == 0:
  echo "zero"
elif a == 1:
  echo "one"
elif a == 2:
  echo "two"
else:
  echo "more"

if a > 1:
  for i in 1 .. 5:
    if a == 0:
      echo "zero"
    elif a == 1:
      echo "one"
    elif a == 2:
      echo "two"
    else:
      echo "more"
